# fast-api-practice

./: pyproject.toml
src/todos/: main.py
