[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "muneebwalikhan",email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]
[tool.poetry]
packages = [{include = "todos", from = "src"}]

[tool.poetry.scripts]
dev = "src.todos.main:start"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
